Ajout css + img

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 
 <body>
 
+<p id="blue">  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque non scelerisque nunc, vel tincidunt sapien. Mauris sit amet tellus egestas, hendrerit velit quis, sollicitudin ex. Integer bibendum eros id pretium suscipit. In accumsan leo ut velit sollicitudin ornare. Suspendisse pellentesque massa vel libero consectetur porttitor. Proin a nisl quis odio tempus aliquam. Nam quis arcu a turpis finibus tincidunt. Aenean et eleifend enim. Quisque tincidunt justo sed nibh pulvinar, id egestas mi euismod. Vivamus luctus tristique eros sit amet finibus. </p>
+
+<p id="blanc">Nulla eu vehicula ligula, ac mattis nulla. Fusce a tortor ac neque gravida auctor vel nec ligula. Duis id lobortis nibh, eget ornare mauris. Fusce euismod sit amet ipsum eget auctor. Donec non hendrerit lacus, a sodales magna. Mauris scelerisque tincidunt nunc. Ut venenatis semper metus, consequat congue felis eleifend nec. Cras id metus ante. Pellentesque pretium erat at tristique ultrices. Phasellus ultrices felis id lacinia dapibus. Fusce tincidunt vel urna nec tristique. </p>
+
+<p id="rouge">Sed euismod maximus diam, non placerat augue ornare nec. Praesent eleifend turpis vel odio finibus ornare. Etiam rhoncus, erat non ornare mollis, tellus nibh sagittis mauris, mattis cursus lacus elit eu nunc. Ut sed sapien id mi hendrerit ullamcorper non a ante. Donec ultricies vehicula tellus, eget suscipit justo ullamcorper in. Suspendisse potenti. In at justo lorem. Aliquam efficitur odio sit amet nulla ornare varius. Nam nisl nulla, commodo quis venenatis non, pellentesque nec eros. Sed bibendum, magna non egestas mollis, sapien ipsum maximus quam, in convallis turpis ex vitae diam. 
+<img src="img/calais.jpg"/>
+</p>
 <!-- Le reste du contenu -->
 
 </body>
