Media Queries TP2

--- a/TP2 Exercice/index.html
+++ b/TP2 Exercice/index.html
@@ -12,7 +12,9 @@
   <body>
 	<div id ="header">
 	<div id ="logo">
-		<img src="img/League.png" alt="Logo"/>
+		<img src="img/menu.png" id="imgmenu"/>
+		<img src="img/League.png" alt="Logo" id="league"/>
+		<img src="img/phone.png" id="phone"/>
 	</div>
 	
 		<ul id="menu">
