--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 	<title>M4105C : Un super module</title>
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="icon" href="img/logo.png" />
+	<link rel="icon" href="img/logo.png" alt="Logo du site"/>
+	<link rel="stylesheet" media="screen and (max-width: 800px)" href="petite_resolution.css" />
 
-	<div><a href="../Formulaire 1/index.html">Précédent (formulaire n°1)</a></div>
+
 </head>
 
 <body>
@@ -18,7 +19,7 @@
 <p id="blanc">Nulla eu vehicula ligula, ac mattis nulla. Fusce a tortor ac neque gravida auctor vel nec ligula. Duis id lobortis nibh, eget ornare mauris. Fusce euismod sit amet ipsum eget auctor. Donec non hendrerit lacus, a sodales magna. Mauris scelerisque tincidunt nunc. Ut venenatis semper metus, consequat congue felis eleifend nec. Cras id metus ante. Pellentesque pretium erat at tristique ultrices. Phasellus ultrices felis id lacinia dapibus. Fusce tincidunt vel urna nec tristique. </p>
 
 <p id="rouge">Sed euismod maximus diam, non placerat augue ornare nec. Praesent eleifend turpis vel odio finibus ornare. Etiam rhoncus, erat non ornare mollis, tellus nibh sagittis mauris, mattis cursus lacus elit eu nunc. Ut sed sapien id mi hendrerit ullamcorper non a ante. Donec ultricies vehicula tellus, eget suscipit justo ullamcorper in. Suspendisse potenti. In at justo lorem. Aliquam efficitur odio sit amet nulla ornare varius. Nam nisl nulla, commodo quis venenatis non, pellentesque nec eros. Sed bibendum, magna non egestas mollis, sapien ipsum maximus quam, in convallis turpis ex vitae diam. 
-<img src="img/calais.jpg"/>
+<img src="img/calais.jpg" alt="Photo de la mairie de Calais" />
 </p>
 
 	<div class="body">
@@ -42,7 +43,7 @@
 				<input type="tel" pattern="^((\+\d{1,3}(-| )?\(?\d\)?(-| )?\d{1,5})|(\(?\d{2,6}\)?))(-| )?(\d{3,4})(-| )?(\d{4})(( x| ext)\d{1,5}){0,1}$"/>
 				
 				<label for="mail">Adresse électronique</label>
-				<input type="mail" placeholder="mon@adresse.fr" id="mail" />
+				<input type="mail" id="mail" />
 
 				<label for="url">Page Facebook</label>
 				<input type="url" value="http://" name="website">
